...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?actionBarSize"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTest"
                android:layout_width="match_parent"
                android:paddingVertical="@dimen/padding_small"
                android:background="?selectableItemBackground"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Click Me" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/plant_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:paddingStart="@dimen/card_side_margin"
                android:paddingTop="@dimen/header_margin"
...
