<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_plantListFragment"
            android:icon="@drawable/bookmark"
            android:title="@string/bookmark" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notification"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/person"
            android:title="@string/profile" />

    </group>
</menu>