...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/plant_item_image"
                android:layout_width="0dp"
                android:layout_height="@dimen/plant_item_image_height"
                android:contentDescription="@string/a11y_plant_item_image"
                android:scaleType="centerCrop"
                app:imageFromUrl="@{plant.imageUrl}"
                app:layout_constraintEnd_toEndOf="parent"
...
